# AlgoviConsole

./: .clang-format  CMakeLists.txt  build.py
apps/: CMakeLists.txt  algovi_complation_script.sh  algovi_start_script.sh
apps/algovi_lib/: CMakeLists.txt
apps/algovi_lib/include/algovi/: read.hpp  viz.hpp
apps/algovi_lib/include/algovi/geometry/: Point.hpp
apps/algovi_lib/include/algovi/paint/: Brush.hpp  Color.hpp  Pen.hpp
apps/generate/: CMakeLists.txt  generate.cpp
apps/test/: CMakeLists.txt  test_utils.cpp  tester.cpp
apps/test/create/: CMakeLists.txt  algovi_test_create.sh
apps/test/init/: CMakeLists.txt  init.cpp
apps/test/print/: CMakeLists.txt  print.cpp
apps/test/rm/: CMakeLists.txt  remove.cpp
apps/test/status/: CMakeLists.txt  status.cpp
apps/test/switch/: CMakeLists.txt  switch.cpp
apps/test/visual/: CMakeLists.txt  visual.cpp
apps/tester/: CMakeLists.txt  tester.cpp
apps/tester/tester/: CMakeLists.txt  tester.cpp
apps/tester/visual/: CMakeLists.txt  tester_visual.cpp
apps/validate/: CMakeLists.txt  validate.cpp
build_tools/: Libraries.cmake
common/: CMakeLists.txt
common/filesystem/: CMakeLists.txt
common/filesystem/include/filesystem/: FSNavigation.hpp  FileIO.hpp  FilesystemException.hpp  TempFile.hpp
common/output_utils/: CMakeLists.txt
common/output_utils/include/output_utils/: PrintTable.hpp
common/settings_reader/: CMakeLists.txt
common/settings_reader/include/settings_reader/: Settings.hpp
compiler/: CMakeLists.txt
compiler/include/compiler/: Compiler.hpp  Executable.hpp  Language.hpp  SourceCode.hpp
compiler/src/: Compiler.cpp  Executable.cpp  SourceCode.cpp
compiler/src/utils/: LangExtractor.hpp
compiler/test/: CMakeLists.txt  compiler_test.cpp
executor/: CMakeLists.txt
executor/include/executor/: Executor.hpp
executor/src/: Executor.cpp
executor/test/: CMakeLists.txt  executor_test.cpp
external_libs/: CMakeLists.txt
external_libs/termcolor/: CMakeLists.txt
external_libs/termcolor/include/termcolor/: termcolor.hpp
external_libs/testlib2/: CMakeLists.txt
external_libs/testlib2/checkers/: CMakeLists.txt
external_libs/testlib2/generators/: CMakeLists.txt  iwgen.cpp  sgen.cpp
test_archive/: CMakeLists.txt
test_archive/include/test_archive/: ITest.hpp  Test.hpp  TestArchive.hpp  TestData.hpp  TestFromFile.hpp
test_archive/src/: Test.cpp  TestArchive.cpp  TestData.cpp  TestFromFile.cpp
test_archive/test/: CMakeLists.txt  test_basic.cpp
tester/: CMakeLists.txt
tester/include/tester/: Checker.hpp  Test.hpp  Tester.hpp  Validator.hpp
tester/src/: Checker.cpp  Test.cpp  Tester.cpp  Validator.cpp
tester/test/: CMakeLists.txt  test_basic.cpp  tester_test.cpp
visualize/: CMakeLists.txt
visualize/include/visualize/model/: CommandVisualizer.hpp  IVisualizer.hpp
visualize/include/visualize/view/: GraphicsScene.hpp  Line.hpp  MainWindow.hpp  Point.hpp
visualize/model/: CMakeLists.txt
visualize/model/src/: CommandVisualizer.cpp
visualize/test/: .main.cpp.swp  CMakeLists.txt  main.cpp
visualize/view/: CMakeLists.txt
visualize/view/src/: GraphicsScene.cpp  Line.cpp  MainWindow.cpp  Point.cpp
