
FILE ( GLOB_RECURSE COMMANDS_LIB_SOURCES
   "*.h"
   "*.cpp"
)

ADD_LIBRARY ( ${COMMANDS_LIB_NAME} STATIC ${COMMANDS_LIB_SOURCES})

FIND_PACKAGE ( Qt5Core REQUIRED )

QT5_USE_MODULES ( ${COMMANDS_LIB_NAME} Core Widgets Network )

TARGET_LINK_LIBRARIES ( ${COMMANDS_LIB_NAME}
   ${Boost_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
)

INSTALL (
   TARGETS
      ${COMMANDS_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
